# ustc-adbs-lab

./: .gitignore  CMakeLists.txt  README.md
data/: data-5w-1000.txt  data-5w-50w-zipf.txt
include/: BufferPoolManager.h  ClockReplacer.h  Common.h  DataStorageManager.h  LRUReplacer.h  Page.h  Replacer.h
src/: BufferPoolManager.cc  ClockReplacer.cc  DataStorageManager.cc  LRUReplacer.cc
test/: buffer_pool_manager_test.cc  clock_replacer_test.cc  data_storage_manager_test.cc  lru_replacer_test.cc  main.cc  main_multi_thread.cc
